examples/test/testpolicy9697.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9697
  namespace: namespace12
spec:
  podSelector:
    matchLabels:
      key16: value28
      key41: value19
      key19: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value20
      podSelector:
        matchLabels:
          key34: value39
